derive/tests/ui/field-duplicate-attr.stderr
error: Duplicate attribute
 --> tests/ui/field-duplicate-attr.rs:6:5
  |
6 |     #[track]
  |     ^^^^^^^^

error: Duplicate attribute
 --> tests/ui/field-duplicate-attr.rs:5:5
  |
5 |     #[track]
  |     ^^^^^^^^
